--- a/build.gradle
+++ b/build.gradle
@@ -142,6 +142,12 @@ repositories {
     // }
 
     maven {
+        url = "https://dvs1.progwml6.com/files/maven/"      // JEI
+    }
+    maven{
+        url = "https://modmaven.k-4u.nl"        // Mirror for JEI
+    }
+    maven {
         url = "https://www.cursemaven.com"
         content {
             includeGroup "curse.maven"
@@ -180,8 +186,10 @@ dependencies {
     runtimeOnly fg.deobf("curse.maven:patchouli-306770:6164575")
     //tfc
     implementation fg.deobf("curse.maven:terrafirmacraft-302973:6739107")
-    //jei
-    runtimeOnly fg.deobf("curse.maven:jei-238222:6600311")
+    // JEI
+    compileOnly(fg.deobf("mezz.jei:jei-${minecraft_version}-forge-api:${jeiVersion}"))
+    compileOnly(fg.deobf("mezz.jei:jei-${minecraft_version}-common-api:${jeiVersion}"))
+    runtimeOnly(fg.deobf("mezz.jei:jei-${minecraft_version}-forge:${jeiVersion}"))
     //jade
     runtimeOnly fg.deobf("curse.maven:jade-324717:6271651")
 
