--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,10 @@ forge_version=47.4.4
 forge_version_range=[47,)
 # The loader version range can only use the major version of Forge/FML as bounds
 loader_version_range=[47,)
+
+##Dependency Properties
+jeiVersion = 15.2.0.21
+
 # The mapping channel to use for mappings.
 # The default set of supported mapping channels are ["official", "snapshot", "snapshot_nodoc", "stable", "stable_nodoc"].
 # Additional mapping channels can be registered through the "channelProviders" extension in a Gradle plugin.
@@ -38,7 +42,7 @@ mod_name=Farmers TFC
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=All Rights Reserved
 # The mod version. See https://semver.org/
-mod_version=0.1.1-1.20.1
+mod_version=0.2.0-1.20.1
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
